--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,10 @@
     <string name="tvname">Tên:</string>
     <string name="Delete">Delete</string>
     <string name="key_update">Update</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="key_all_table">All Table</string>
+    <string name="key_use_table">Used Table</string>
+    <string name="empty_table">Empty Table</string>
 </resources>
