--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,5 @@
     <string name="key_Incorrect_password">Incorrect password</string>
     <string name="key_changePassword_Success">Change Password Success</string>
     <string name="key_search">Search</string>
+    <string name="key_Order">Order</string>
 </resources>
